# flood_susceptibility

./: .gitattributes  .gitignore  README.md  pyproject.toml
config/: config.py  requirements.txt
data/processed/: sample_factor_stack.npy  sample_valid_mask.npy
data/processed/harmonized/: BSI_Taherpur_2025.tif  Curvature.tif  Distance_from_Waterbody.tif  Drainage_density.tif  Elevation.tif  MSI_Taherpur_2025.tif  NDBI_Taherpur_2025.tif  NDMI_Taherpur_2025.tif  NDVI_Taherpur_2025.tif  NDWI_Taherpur_2025.tif  Rainfall.tif  Slope.tif  TPI.tif  TWI.tif
data/processed/harmonized_full/: BSI_Taherpur_2025.tif  Curvature.tif  Distance_from_Waterbody.tif  Drainage_density.tif  Elevation.tif  Export_LULC_Taherpur_Sentinel2.tif  Lithology.tif  MSI_Taherpur_2025.tif  NDBI_Taherpur_2025.tif  NDMI_Taherpur_2025.tif  NDVI_Taherpur_2025.tif  NDWI_Taherpur_2025.tif  Rainfall.tif  SAVI_Taherpur_2025.tif  Slope.tif  TPI.tif  TWI.tif  WRI_Taherpur_2025.tif
data/raw/Tahirpur/: BSI_Taherpur_2025.tif  Curvature.tif  Curvature.tif.aux.xml  Curvature.tif.ovr  Distance_from_Waterbody.tfw  Drainage_density.tfw  (+47 more)
models/trained/: flood_susceptibility_model.h5
outputs/maps/: factor_importance.csv  flood_susceptibility_classified.tif  flood_susceptibility_continuous.tif
scripts/: project_status.py  setup_project.py
src/: cnn_flood_susceptibility.py  data_exploration.py  data_harmonization.py  flood_susceptibility_cnn.py  full_harmonization_optimized.py  generate_flood_map.py  quick_harmonization.py  run_preprocessing.py  simple_cnn_approach.py  train_cnn_simple.py  train_full_cnn.py
